# article-benchmark

./: .gitignore  PLAN.md  README.md  performance.html  pyproject.toml  slides.html
benchmark/synthetic/pilot/: ALL_PROMPTS.md  Synthetic001_ground_truth.json  Synthetic001_paper_text.txt  Synthetic001_prompt.txt  Synthetic002_ground_truth.json  Synthetic002_paper_text.txt  Synthetic002_prompt.txt  Synthetic003_ground_truth.json  Synthetic003_paper_text.txt  Synthetic003_prompt.txt  Synthetic004_ground_truth.json  Synthetic004_paper_text.txt  Synthetic004_prompt.txt  Synthetic005_ground_truth.json  Synthetic005_paper_text.txt  Synthetic005_prompt.txt  Synthetic006_ground_truth.json  Synthetic006_paper_text.txt  Synthetic006_prompt.txt  Synthetic007_ground_truth.json  Synthetic007_paper_text.txt  Synthetic007_prompt.txt  Synthetic008_ground_truth.json  Synthetic008_paper_text.txt  Synthetic008_prompt.txt  Synthetic009_ground_truth.json  Synthetic009_paper_text.txt  Synthetic009_prompt.txt  Synthetic010_ground_truth.json  Synthetic010_paper_text.txt  Synthetic010_prompt.txt  Synthetic011_ground_truth.json  Synthetic011_paper_text.txt  Synthetic011_prompt.txt  Synthetic012_ground_truth.json  Synthetic012_paper_text.txt  Synthetic012_prompt.txt  Synthetic013_prompt.txt  (+5 more)
generation/: generate_ground_truth.py  generate_paper_text.py
src/bench_score/: __init__.py  align.py  cli.py  field_compare.py  latex_compare.py  report.py  score.py  types.py
templates/: microbial_growth.json
tests/: conftest.py  test_align.py  test_field_compare.py  test_latex_compare.py  test_score.py
(+7 files in other folders)
