[project]
name = "bench-score"
version = "0.1.0"
description = "Scoring framework for dairy science equation extraction benchmarks"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
]

[project.scripts]
bench-score = "bench_score.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bench_score"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
extend-ignore = ["E501"]
